# pyglass

./: .gitignore  README.md  pyglass_backend.yaml  requirement.txt
algorithm/: ellipse_calibration.py
backend/: .gitignore  CenterCalibrationProcessor.py  CrystalStrainProcessor.py  DM4Processor.py  ImageProcessor.py  Py4dstemProcessor.py  RDFProcessor.py  Test diff 128x128x0,036A-1.npy  Test ePDF 600pix_0,01A_per_Pixel, FT_from_4_to_63 pixels_of_Diff.npy  XemACOMViewer.py  XemMatcher.py  XemSimulator.py  flask_test.py  kirkland.pkl  pixi.toml  pyproject.toml  rdf.ipynb  test.ipynb  try.ipynb  utils.py
frontend/: README.md  package-lock.json  package.json  quasar.config.js
frontend/src/: App.vue
frontend/src-electron/: electron-main.js  electron-preload.js
frontend/src/assets/: periodicData.js
frontend/src/boot/: socketio.js
frontend/src/components/: IPFSelect.vue  ImageSelect.vue  RDFSelect.vue  SelectedElementsList.vue
frontend/src/layouts/: ACOMLayout.vue  AcomViewerLayout.vue  CalibrationLayout.vue  DiffSimLayout.vue  MainLayout.vue  RDFLayout.vue
frontend/src/pages/: CenterCalibration.vue  ElipseCalibration.vue  RDF.vue  RDF_plot.vue  RDF_sel.vue  RDF_table.vue  ViewDM4.vue
frontend/src/pages/ACOM/: Calculate_ACOM.vue  Calibrate_Center.vue  Calibrate_Ellipticity.vue  Calibrate_Pixel_Size.vue  Detect_Bragg_Disks.vue  Select_Area.vue  Set_Probe.vue  View_Area.vue
frontend/src/pages/ACOM_XEM/: ACOM_Viewer.vue
frontend/src/pages/DiffSim/: DiffSim.vue
frontend/src/router/: routes.js
frontend/src/stores/: index.js
