[project]
authors = [{name = "yangkunyi", email = "yangkunyi@sjtu.edu.cn"}]
dependencies = [ "flask", "flask-socketio", "opencv-python", "ncempy", "numpy", "jupyter"]
description = "Add a short description here"
name = "backend"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
backend = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.hatch.build.targets.wheel]
packages = ["pyglass/backend"]
