[project]
authors = [{name = "yangkunyi", email = "yangkunyi@sjtu.edu.cn"}]
dependencies = [ "flask>=3.0.3,<4", "flask-socketio>=5.4.1,<6", "opencv-python>=4.10.0.84,<5", "abtem>=1.0.6,<2", "numpy>=1.26.4,<2", "jupyter>=1.1.1,<2", "polartransform>=2.0.0,<3", "ncempy>=1.11.1,<2", "loguru>=0.7.2,<0.8", "auto-py-to-exe>=2.44.2,<3"]
description = "Add a short description here"
name = "backend"
requires-python = "== 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
backend = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
py4dstem = ">=0.14.9,<0.15"
gevent = ">=24.11.1,<25"
pymatgen = ">=2024.11.13,<2025"

[tool.hatch.build.targets.wheel]
packages = ["backend/backend"]
